spl2/hn_tests/failing/euler6-4.hn
hnMain = {
	natr f = {
		g x total = 1
		natrec g 0 100
	}
	print (natr incr)
}